--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "book-list",
   "version": "0.1.0",
+  "homepage": "https://basaj.dev/book-list",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "sanitize.css": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
